Created Class for building interface menu, and a class for building Delegate Menu, changed to new main

--- a/B18 Ex04 Eyal 321149296 Daniel 311250336/Ex04.Menus.Test/Ex04.Menus.Test.csproj
+++ b/B18 Ex04 Eyal 321149296 Daniel 311250336/Ex04.Menus.Test/Ex04.Menus.Test.csproj
@@ -33,7 +33,8 @@
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="CountCapitals.cs" />
-    <Compile Include="Methods.cs" />
+    <Compile Include="DelegateMenu.cs" />
+    <Compile Include="InterfaceMenu.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="ShowDate.cs" />
     <Compile Include="ShowTime.cs" />
